--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.58",
+    "@types/prismjs": "^1.16.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "bootstrap": "^4.5.2",
+    "prismjs": "^1.21.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-simple-code-editor": "^0.11.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
