--- a/server/stack.yaml
+++ b/server/stack.yaml
@@ -9,6 +9,10 @@ extra-deps:
   - ../../haskell-binja
   - ../../binja-header-cleaner
   - ../../binary-analysis
+  - parameterized-utils-2.0.1.0@sha256:ad6950440361b97222fe83932760311f88a0288e60f5d90ecbc67a68b86252fd,3673
+  # - z3-408.0@sha256:89bbc2d828dc1fe1f19666e8e501c69ce5d0ed8026e4a02f7eae1e69f4a352af,4052
+  - git: https://github.com/LeventErkok/sbv.git
+    commit: 8576ba7085e86d4a3b8f6ffcb857d8a91346a33e
+  - git: https://github.com/meditans/haskell-z3.git
+    commit: 8bb9fe8628f1e915880da1aaf2c20ce3e0a4fb2d
   - dom-lt-0.2.0@sha256:fc7451d6ada55233239d22b6eed8f2e4c1c1290f1cad101c9d429ea875aa72e6,1615
-  - parameterized-utils-2.0.2@sha256:cc73ba825a25f76328300f7c1a59fca1f8ff7e3dc15fb9120e7978f7b0450771,3731
-  - sbv-8.6@sha256:1bcd7a8851157a97e44a000498f984fb738e54441f16e8c2e2afcc1d0818e888,19781
