--- a/server/stack.yaml
+++ b/server/stack.yaml
@@ -16,3 +16,4 @@ extra-deps:
   - git: https://github.com/meditans/haskell-z3.git
     commit: 8bb9fe8628f1e915880da1aaf2c20ce3e0a4fb2d
   - dom-lt-0.2.0@sha256:fc7451d6ada55233239d22b6eed8f2e4c1c1290f1cad101c9d429ea875aa72e6,1615
+  - purescript-bridge-0.14.0.0@sha256:f4597cb0e5ca83890a642bc35dc2df503fda720a600d2a4782b4e737ebf6fcae,3219
