--- a/server/package.yaml
+++ b/server/package.yaml
@@ -29,6 +29,7 @@ dependencies:
   - blaze
   - bytestring
   - containers
+  - directory
   - envy
   - extra
   - hashable
@@ -38,7 +39,7 @@ dependencies:
   - mtl
   - pretty-simple
   - protolude
-  - purescript-bridge >= 0.14.0.0
+  - purescript-bridge # >= 0.14.0.0
   - random
   - scotty
   - stm
