--- a/server/stack.yaml
+++ b/server/stack.yaml
@@ -15,6 +15,6 @@ extra-deps:
     commit: 8576ba7085e86d4a3b8f6ffcb857d8a91346a33e
   - git: https://github.com/meditans/haskell-z3.git
     commit: 8bb9fe8628f1e915880da1aaf2c20ce3e0a4fb2d
-  - git: https://github.com/shmish111/purescript-bridge.git
-    commit: fb8a038e4c9a97377834779ec6b2e0e7faf5b2a1
+  - git: https://github.com/mpdairy/purescript-bridge
+    commit: 20d52c64f56ef75fda07fb39e9aedb0b7fafd0d2
   -  dom-lt-0.2.0@sha256:fc7451d6ada55233239d22b6eed8f2e4c1c1290f1cad101c9d429ea875aa72e6,1615
