convert Checker.TypeReport to ui TypeReport

--- a/server/package.yaml
+++ b/server/package.yaml
@@ -32,6 +32,7 @@ dependencies:
   - directory
   - envy
   - extra
+  - generic-lens
   - hashable
   - hashids
   #  - ghc-typelits-natnormalise
@@ -55,6 +56,7 @@ dependencies:
 
 default-extensions:
   - BangPatterns
+  - DataKinds
   - DeriveAnyClass
   - DeriveDataTypeable
   - DeriveFoldable
@@ -71,13 +73,14 @@ default-extensions:
   - LambdaCase
   - MultiParamTypeClasses
   - NoImplicitPrelude
+  - OverloadedLabels
   - OverloadedStrings
   - ScopedTypeVariables
   - StandaloneDeriving
 #  - StrictData
   - TupleSections
+  - TypeApplications
   - TypeFamilies
-
 
 library:
   ghc-options:
