--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "build-prod": "mkdir -p prod && cp dev/index.html prod/ && rm -rf dist && spago bundle-app --to prod/index.js && parcel build prod/index.html"
   },
   "dependencies": {
+    "json-bigint": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
