--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,14 @@
     "build-prod": "mkdir -p prod && cp dev/index.html prod/ && rm -rf dist && spago bundle-app --to prod/index.js && parcel build prod/index.html"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/data-grid": "^4.0.0-alpha.15",
+    "@material-ui/lab": "^4.0.0-alpha.36",
+    "@material-ui/styles": "^4.11.2",
+    "@types/react": "^17.0.0",
     "json-bigint": "^1.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "uuid-validate": "0.0.3"
   }
 }
