--- a/server/stack.yaml
+++ b/server/stack.yaml
@@ -5,7 +5,7 @@ packages:
   - .
   
 extra-deps:
-  - ../../haskell-blaze
+  - ../../blaze
   - ../../binaryninja-haskell
   - ../../binary-analysis
   - parameterized-utils-2.0.1.0@sha256:ad6950440361b97222fe83932760311f88a0288e60f5d90ecbc67a68b86252fd,3673
