Cleaned up usage information. Changed executable name to use dashes instead of underscores for consistency with other projects and components. Fixed Dockerfile to use CMD for the entrypoint of the image.

--- a/server/package.yaml
+++ b/server/package.yaml
@@ -102,7 +102,7 @@ include-dirs:
   - "../../binaryninja-haskell/res"
 
 executables:
-  blaze_ui_server:
+  blaze-ui-server:
     main: Main.hs
     source-dirs:  app
     ghc-options:
