--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ variables:
 
 .haskell-job:
   extends: .dind
-  image: ${REPO_DOCKER_REGISTRY}/blaze-ui:commit-${CI_COMMIT_SHA}
+  image: ${REPO_DOCKER_REGISTRY}/blaze-service:commit-${CI_COMMIT_SHA}
   # Skip .dind before_script, especially the environment info, since we don't
   # care about most of it after the build stage
   before_script: []
@@ -82,7 +82,7 @@ build:branch:
     - if: $CI_MERGE_REQUEST_IID == null
   needs: []
   script:
-    - image=${REPO_DOCKER_REGISTRY}/blaze-ui
+    - image=${REPO_DOCKER_REGISTRY}/blaze-service
     - docker login -u "${CI_REGISTRY_USER}" -p "$CI_JOB_TOKEN" "$CI_REGISTRY"
     - docker pull "${image}:branch-${CI_COMMIT_REF_SLUG}" ||
       docker pull "${image}:latest" ||
@@ -100,7 +100,7 @@ build:detached:
     - if: $CI_MERGE_REQUEST_IID
   needs: []
   script:
-    - image=${REPO_DOCKER_REGISTRY}/blaze-ui
+    - image=${REPO_DOCKER_REGISTRY}/blaze-service
     - docker login -u "${CI_REGISTRY_USER}" -p "$CI_JOB_TOKEN" "$CI_REGISTRY"
     - docker pull "${image}:merge-${CI_MERGE_REQUEST_IID}" ||
       docker pull "${image}:latest" ||
@@ -129,7 +129,7 @@ test:branch:
 test:detached:
   stage: test
   extends: .haskell-job
-  image: ${REPO_DOCKER_REGISTRY}/blaze-ui:merge-${CI_MERGE_REQUEST_IID}
+  image: ${REPO_DOCKER_REGISTRY}/blaze-service:merge-${CI_MERGE_REQUEST_IID}
   rules:
     - if: $CI_MERGE_REQUEST_IID
   needs:
@@ -154,7 +154,7 @@ push:latest:
     GIT_STRATEGY: none
     GIT_CLEAN_FLAGS: none
   script:
-    - image=${REPO_DOCKER_REGISTRY}/blaze-ui
+    - image=${REPO_DOCKER_REGISTRY}/blaze-service
     - docker login -u "${CI_REGISTRY_USER}" -p "$CI_JOB_TOKEN" "$CI_REGISTRY"
     - docker pull "${image}:commit-${CI_COMMIT_SHA}"
     - docker tag "${image}:commit-${CI_COMMIT_SHA}" "${image}:latest"
