--- a/server/package.yaml
+++ b/server/package.yaml
@@ -102,7 +102,7 @@ include-dirs:
   - "../../binaryninja-haskell/res"
 
 executables:
-  blaze-ui-server:
+  blaze-server:
     main: Main.hs
     source-dirs:  app
     ghc-options:
@@ -119,7 +119,7 @@ executables:
 
 
 tests:
-  blaze-ui-server-test:
+  blaze-server-test:
     main: Spec.hs
     source-dirs:
     - test
