--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -188,13 +188,14 @@ pages:
     GIT_STRATEGY: none
     GIT_CLEAN_FLAGS: none
   script:
+    - haddock_flags=(--no-haddock-deps)
     - pushd /blaze/blaze-ui/server
-    - stack haddock --no-haddock-deps
-    - docs_dir=$(stack path --snapshot-doc-root)
+    - stack haddock "${haddock_flags[@]}"
+    - docs_dir=$(stack path --snapshot-doc-root "${haddock_flags[@]}")
     - popd
     - cp -arT "$docs_dir" public
   allow_failure: true
-  artifacts:
-    paths:
-      - public
-    expire_in: 12 hours
+  # artifacts:
+  #   paths:
+  #     - public
+  #   expire_in: 12 hours
