--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -193,9 +193,9 @@ pages:
     - stack haddock "${haddock_flags[@]}"
     - docs_dir=$(stack path --snapshot-doc-root "${haddock_flags[@]}")
     - popd
-    - cp -arT "$docs_dir" public
+    # - cp -arT "$docs_dir" public
   allow_failure: true
-  # artifacts:
-  #   paths:
-  #     - public
-  #   expire_in: 12 hours
+  artifacts:
+    paths:
+      - public
+    expire_in: 12 hours
