--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,10 @@
 .env.test.local
 .env.production.local
 
+__pycache__/
+*.pyc
+.python-version
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
