--- a/server/package.yaml
+++ b/server/package.yaml
@@ -48,6 +48,7 @@ dependencies:
   - string-conversions
   - template-haskell
   - text
+  - time
   - transformers
   - unordered-containers
   - uuid
