--- a/server/package.yaml
+++ b/server/package.yaml
@@ -31,6 +31,7 @@ dependencies:
   - containers
   - directory
   - envy
+  - exceptions
   - extra
   - generic-lens
   - hashable
@@ -43,10 +44,13 @@ dependencies:
   - random
   - resource-pool
   - scotty
+  - selda
+  - selda-sqlite
   - stm
   - streamly
   - string-conversions
   - template-haskell
+  - temporary
   - text
   - time
   - transformers
