--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -240,9 +240,19 @@ pages:
     - haddock_flags=(--no-haddock-deps)
     - pushd /blaze/blaze-ui/server
     - stack haddock "${haddock_flags[@]}"
-    - docs_dir=$(stack path --snapshot-doc-root "${haddock_flags[@]}")
+    - docs_dir=$(stack path --local-doc-root "${haddock_flags[@]}")
     - popd
-    # - cp -arT "$docs_dir" public
+    - mkdir public
+    - |
+      if [ -d "$docs_dir" ]; then
+        (
+          shopt -s nullglob
+          cp -ar "$docs_dir"/{*.html,*.css,*.png,*.js,blaze-*,binaryninja-*,binary-analysis-*} public
+        )
+      else
+        echo '<h1>No haddocks created</h1>' > public/index.html
+      fi
+        
   allow_failure: true
   artifacts:
     paths:
