--- a/binja_plugin/setup.cfg
+++ b/binja_plugin/setup.cfg
@@ -14,6 +14,7 @@ packages = find:
 python_requires = >=3.6
 install_requires =
     websockets
+    requests
 
 [options.packages.find]
 where = src
