--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -242,6 +242,10 @@ pages:
     - stack haddock "${haddock_flags[@]}"
     - docs_dir=$(stack path --local-doc-root "${haddock_flags[@]}")
     - popd
+    - ls -al
+    - ls -al public || true
+    # Why is this next line necessary sometimes?
+    - rm -rf public
     - mkdir public
     - |
       if [ -d "$docs_dir" ]; then
