--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,6 @@
 
 # production
 ./build
-binja_plugin/build
-binja_plugin/dist
-*.egg-info
 
 # misc
 .DS_Store
@@ -29,3 +26,7 @@ __pycache__/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+*.egg-info
+*.pyc
+__pycache__/
