--- a/server/stack.yaml
+++ b/server/stack.yaml
@@ -23,3 +23,4 @@ extra-deps:
   - uuid-types-1.0.4@sha256:34de8cf688e30f668cba5e5d79e907eb7f65bca2538ce927fddb42d74840036b,2433
   - selda-sqlite-0.1.7.1@sha256:d750cb189dfd5049628cd1dd0a5d7abda95bdac4a451e0973fc9fde80e70ed17,1257
   - direct-sqlite-2.3.26@sha256:04e835402f1508abca383182023e4e2b9b86297b8533afbd4e57d1a5652e0c23,3718
+  - scotty-0.12
