--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - BLAZE_UI_SQLITE_FILEPATH=/blaze/persistent/blaze.sqlite
       - BLAZE_UI_BNDB_STORAGE_DIR=/blaze/persistent/bndbs
 
-  wheel-server:
+  blaze-plugin-repository:
     image: ${CI_REGISTRY}/${CI_PROJECT_NAMESPACE}/blaze-ui/blaze-wheel-server
     # image: 077943246560.dkr.ecr.us-east-2.amazonaws.com/integrated_blaze_system/kudu/blaze-wheel-server
     build:
