--- a/binja_plugin/setup.cfg
+++ b/binja_plugin/setup.cfg
@@ -15,6 +15,7 @@ python_requires = >=3.6
 install_requires =
     websockets
     requests
+    typing_extensions
 
 [options.packages.find]
 where = src
