--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,3 @@
-Dockerfile*
-docker-compose*.yml
-.dockerignore
-
 .git
 .gitlab-ci.yml
 
@@ -11,3 +7,78 @@ server/**/dist-newstyle
 server/**/dist
 
 node_modules
+
+###################
+# From .gitignore #
+###################
+
+# dependencies
+**/node_modules
+**/.pnp
+**/.pnp.js
+
+#testing
+**/coverage
+
+# production
+**/build
+
+# misc
+**/.DS_Store
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+**/.dir-locals-2.el
+
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+
+**/*.egg-info
+**/*.pyc
+**/__pycache__/
+**/.python-version
+
+################################
+# From binja_plugin/.gitignore #
+################################
+
+binja_plugin/**/build/
+binja_plugin/**/dist/
+
+##########################
+# From server/.gitignore #
+##########################
+
+server/**/*.cabal
+server/**/dist
+server/**/dist-*
+server/**/cabal-dev
+server/**/*.o
+server/**/*.hi
+server/**/*.chi
+server/**/*.chs.h
+server/**/*.dyn_o
+server/**/*.dyn_hi
+server/**/.hpc
+server/**/.hsenv
+server/**/.cabal-sandbox/
+server/**/cabal.sandbox.config
+server/**/*.prof
+server/**/*.aux
+server/**/*.hp
+server/**/*.eventlog
+server/**/.stack-work/
+server/**/cabal.project.local
+server/**/cabal.project.local~
+server/**/.HTF/
+server/**/.ghc.environment.*
+server/**/.stack-work
+server/**/*.liquid
+server/**/*~
+server/**/.DS_Store
+server/**/.ghcid
+server/**/*.lock
+server/**/res/extra_bins
+server/**/*.hie
