--- a/binja_plugin/pyproject.toml
+++ b/binja_plugin/pyproject.toml
@@ -1,6 +1,18 @@
+[tool.poetry]
+name = "blaze"
+version = "0.1.0"
+description = "Blaze"
+authors = ["Kudu Dynamics"]
+
+[tool.poetry.dependencies]
+python = ">=3.6.1,<3.10"
+websockets = "^9.1"
+requests = "^2.26.0"
+typing-extensions = "^3.10.0"
+PySide6 = "^6.1.2"
+
+[tool.poetry.dev-dependencies]
+
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
-]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
