--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ workflow:
   - echo -e "section_start:`date +%s`:bootstrap[collapsed=true]\r\e[0KBootstrap build dependencies"
   - |
     if [ -f /etc/alpine-release ]; then
-      apk add git coreutils python3
+      apk add coreutils curl git jq python3
       apk add -X http://dl-cdn.alpinelinux.org/alpine/edge/testing time
     fi
   - echo -e "section_end:`date +%s`:bootstrap\r\e[0K"
@@ -47,6 +47,12 @@ workflow:
   - df -h
   - date -Iseconds
   - |
+    if type jq >/dev/null; then
+      echo 'Docker Hub ratelimit:'
+      curl -s --head -H "Authorization: Bearer $(curl -s 'https://auth.docker.io/token?service=registry.docker.io&scope=repository:ratelimitpreview/test:pull' | jq -r .token)" \
+        https://registry-1.docker.io/v2/ratelimitpreview/test/manifests/latest | grep ^ratelimit
+    fi
+  - |
     if type git >/dev/null; then
       pushd "$BLAZE_BINJA_API" >/dev/null && \
         { git log --color --decorate HEAD^..HEAD | cat || true;
@@ -60,7 +66,7 @@ workflow:
   - echo -e "section_end:`date +%s`:pre-env\r\e[0K"
 
 .dind:
-  image: docker:dind
+  image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/docker:dind
   tags:
     - dind
   timeout: 1h
@@ -84,7 +90,7 @@ workflow:
 
 .python-job:
   extends: .generic-job
-  image: python:3.8-slim
+  image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/python:3.8-slim
 
 .python-setup: &python-setup
   - echo -e "section_start:`date +%s`:setup-python[collapsed=true]\r\e[0KSet up python dependencies"
