Fix some type warnings, autoformat stub files

--- a/binja_plugin/pyrightconfig.json
+++ b/binja_plugin/pyrightconfig.json
@@ -1,5 +1,18 @@
 {
     "stubPath": "./stubs",
+    "include": [
+        "src/",
+        "stubs/"
+    ],
+    "exclude": [
+        ".venv/",
+        "dist/",
+        "build/",
+        "**/*.egg-info",
+        "**/node_modules",
+        "**/__pycache__",
+        "**/.git"
+    ],
     "useLibraryCodeForTypes": true,
     "reportUnnecessaryComparison": "warning",
     "reportOptionalSubscript": "error",
